# ndt_omp

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml
.github/workflows/: build.yml  pre-commit.yml  regression_test.yml
apps/: align.cpp  check_covariance.cpp  exec_particle_filter.cpp  execute_align_by_default_params.cpp  initialpose_estimation.cpp  pcd_map_grid_manager.hpp  regression_test.cpp  timer.hpp  util.hpp
docker/: Dockerfile_gcc  Dockerfile_llvm
docker/galactic/: Dockerfile
docker/galactic_llvm/: Dockerfile
docker/melodic/: Dockerfile
docker/melodic_llvm/: Dockerfile
docker/noetic/: Dockerfile
docker/noetic_llvm/: Dockerfile
include/autoware/ndt_omp/estimate_covariance/: estimate_covariance.hpp
include/autoware/ndt_omp/multigrid_pclomp/: multi_voxel_grid_covariance_omp.h  multi_voxel_grid_covariance_omp_impl.hpp  multigrid_ndt_omp.h  multigrid_ndt_omp_impl.hpp
include/autoware/ndt_omp/pclomp/: gicp_omp.h  gicp_omp_impl.hpp  ndt_omp.h  ndt_omp_impl.hpp  ndt_struct.hpp  voxel_grid_covariance_omp.h  voxel_grid_covariance_omp_impl.hpp
include/bbs3d/: README.md  bbs3d.hpp  discrete_transformation.hpp  initialpose_estimation.hpp  random_search.hpp  tree_structured_parzen_estimator.hpp  voxelmaps.hpp
include/estimate_covariance/: estimate_covariance.hpp
include/fast_gicp/: README.md
include/fast_gicp/gicp/: fast_gicp.hpp  fast_vgicp.hpp  fast_vgicp_voxel.hpp  gicp_settings.hpp  lsq_registration.hpp
include/fast_gicp/gicp/impl/: fast_gicp_impl.hpp  fast_vgicp_impl.hpp  lsq_registration_impl.hpp
include/fast_gicp/so3/: so3.hpp
include/multigrid_pclomp/: multi_voxel_grid_covariance_omp.h  multi_voxel_grid_covariance_omp_impl.hpp  multigrid_ndt_omp.h  multigrid_ndt_omp_impl.hpp  ndt_omp.h  ndt_omp_impl.hpp  registration_without_tree.h  registration_without_tree_impl.hpp  voxel_grid_covariance_omp.h  voxel_grid_covariance_omp_impl.hpp
include/particle_filter/: particle_filter.hpp
include/pclomp/: gicp_omp.h  gicp_omp_impl.hpp  ndt_omp.h  ndt_omp_impl.hpp  ndt_struct.hpp  voxel_grid_covariance_omp.h  voxel_grid_covariance_omp_impl.hpp
regression_test_data/reference/: result.csv
script/: compare_regression_test_result.py  compare_results.py  convert_rosbag_to_test_data.py  download_data.sh  execute_check_covariance.sh  execute_regression_test.sh  interpolate_pose.py  make_flat_pcd.py  plot_covariance.py
src/bbs3d/: bbs3d.cpp  bbs3d_search.cpp  random_search.cpp  tpe_search.cpp  tree_structured_parzen_estimator.cpp  voxelmaps.cpp
src/estimate_covariance/: estimate_covariance.cpp
src/multigrid_pclomp/: multi_voxel_grid_covariance_omp.cpp  multigrid_ndt_omp.cpp  ndt_omp.cpp  voxel_grid_covariance_omp.cpp
src/particle_filter/: particle_filter.cpp
src/pclomp/: gicp_omp.cpp  ndt_omp.cpp  voxel_grid_covariance_omp.cpp
