<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ndt_omp</name>
  <version>0.0.0</version>
  <description>OpenMP boosted NDT and GICP algorithms. With some modifications for Autoware</description>

  <maintainer email="yamato.ando@tier4.jp">Yamato Ando</maintainer>
  <maintainer email="kento.yabuuchi.2@tier4.jp">Kento Yabuuchi</maintainer>
  <maintainer email="masahiro.sakamoto@tier4.jp">Masahiro Sakamoto</maintainer>
  <maintainer email="anh.nguyen.2@tier4.jp">NGUYEN Viet Anh</maintainer>
  <maintainer email="taiki.yamada@tier4.jp">Taiki Yamada</maintainer>
  <maintainer email="shintaro.sakoda@tier4.jp">Shintaro Sakoda</maintainer>
  <maintainer email="ryu.yamamoto@tier4.jp">Ryu Yamamoto</maintainer>

  <author email="koide@aisl.cs.tut.ac.jp">koide</author>

  <license>BSD</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ros_environment</buildtool_depend>

  <depend>libpcl-all-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
